<resources>
    <string name="app_name">GuessTheWord</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_ready">Get ready to...</string>
    <string name="guess_word">guess the word!!!</string>
    <string name="play">PLAY</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="end_game">END GAME</string>
    <string name="the_word_is">The word is...</string>
    <string name="you_scored">You scored...</string>
    <string name="score">Score:</string>

    <string-array name="words">
        <item>queen</item>
        <item>hospital</item>
        <item>basketball</item>
        <item>cat</item>
        <item>change</item>
        <item>snail</item>
        <item>soup</item>
        <item>calendar</item>
        <item>sad</item>
        <item>desk</item>
        <item>guitar</item>
        <item>home</item>
        <item>railway</item>
        <item>zebra</item>
        <item>jelly</item>
        <item>car</item>
        <item>crow</item>
        <item>trade</item>
        <item>bag</item>
        <item>roll</item>
        <item>bubble</item>
    </string-array>
</resources>