<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleFragment">


    <TextView
        android:id="@+id/tvGetReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvGuess"
        app:layout_constraintEnd_toEndOf="@+id/tvGuess"
        app:layout_constraintStart_toStartOf="@+id/tvGuess"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_word"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGetReady" />

    <Button
        android:id="@+id/btPlay"
        style="@style/botonVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>