<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/btSkip"
        style="@style/botonBlanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="@+id/btGotIt"
        app:layout_constraintEnd_toStartOf="@+id/btGotIt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btGotIt" />

    <Button
        android:id="@+id/btGotIt"
        style="@style/botonVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btEndGame"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btSkip"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btEndGame"
        style="@style/botonBlanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game"
        app:layout_constraintBottom_toBottomOf="@+id/btGotIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btGotIt"
        app:layout_constraintTop_toTopOf="@+id/btGotIt" />

    <TextView
        android:id="@+id/tvTheWordIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_word_is"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWord"
        app:layout_constraintEnd_toEndOf="@+id/tvWord"
        app:layout_constraintStart_toStartOf="@+id/tvWord"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTheWordIs" />

    <TextView
        android:id="@+id/tvScoreIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/tvScoreGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWord"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvScoreGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvScoreIs"
        app:layout_constraintStart_toStartOf="@+id/tvScoreIs"
        app:layout_constraintTop_toBottomOf="@+id/tvScoreIs" />
</androidx.constraintlayout.widget.ConstraintLayout>